Logojen tyylittely. Yhteydenottolomake.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
   <link rel="preload" as="image" href="./assets/bg1.avif" fetchpriority="high">
   <link rel="preload" as="image" href="./assets/logo.avif" fetchpriority="high">
-<link rel="preload" as="image" href="./assets/banner_1.avif" type="image/avif" fetchpriority="high" imagesizes="100vw">
+  <link rel="preload" as="image" href="./assets/banner_1.avif" type="image/avif" fetchpriority="high"
+    imagesizes="100vw">
   <link rel="stylesheet" href="./styles.css" />
 
 </head>
@@ -76,20 +77,14 @@
         </nav>
 
       </div>
-<div class="carousel" id="carousel">
-  <div class="track" style="display:flex; transition:transform 0.6s ease; will-change:transform;">
-    <a class="slide" href="#" style="flex:0 0 100%">
-      <img
-        src="/assets/banner_1.avif"
-        alt="Banneri 1"
-        loading="eager"
-        fetchpriority="high"
-        decoding="async"
-        style="width:100%; display:block;"
-      >
-    </a>
-  </div>
-</div>
+      <div class="carousel" id="carousel">
+        <div class="track" style="display:flex; transition:transform 0.6s ease; will-change:transform;">
+          <a class="slide" href="#" style="flex:0 0 100%">
+            <img src="/assets/banner_1.avif" alt="Banneri 1" loading="eager" fetchpriority="high" decoding="async"
+              style="width:100%; display:block;">
+          </a>
+        </div>
+      </div>
 
 
     </section>
@@ -110,31 +105,39 @@
             <span class="logo" style="--logo:url('./assets/logot/davin_logo.avif');"></span>
             <span class="tenant-name">Davin Parturi</span>
           </a>
-          <a class="tenant" href="https://www.facebook.com/people/Kahvilaravintola-Riviera/61579031109923/" target="_blank" rel="noopener"
-            aria-label="Kotipizza" data-name="Riviera">
+          <a class="tenant" href="https://www.facebook.com/people/Kahvilaravintola-Riviera/61579031109923/"
+            target="_blank" rel="noopener" aria-label="Kotipizza" data-name="Riviera">
             <span class="logo" style="--logo:url('./assets/logot/riviera_logo.avif');"></span>
             <span class="tenant-name">Kahvilaravintola Riviera</span>
           </a>
           <a class="tenant" href="https://www.lunula.fi/" target="_blank" rel="noopener"
             aria-label="Kauneushoitola Lunula" data-name="Lunula">
-            <span class="logo" style="--logo:url('./assets/logot/lunula_logo.avif');"></span>
+            <span class="logo"
+              style="--logo-white:url('./assets/logot/lunula_white_logo.avif'); --logo-color:url('./assets/logot/lunula_color_logo.avif');">
+            </span>
             <span class="tenant-name">Kauneushoitola Lunula</span>
           </a>
 
           <a class="tenant" href="https://www.ahtinen.com/" target="_blank" rel="noopener"
             aria-label="Kiinteistö &amp; Notariaatti Ahtinen" data-name="Ahtinen">
-            <span class="logo" style="--logo:url('./assets/logot/ahtinen_logo.avif');"></span>
+            <span class="logo"
+              style="--logo-white:url('./assets/logot/ahtinen_white_logo.avif'); --logo-color:url('./assets/logot/ahtinen_color_logo.avif');">
+            </span>
             <span class="tenant-name">Kiinteistö &amp; Notariaatti Ahtinen</span>
           </a>
 
-          <a class="tenant" href="https://www.kotipizza.fi/ravintolat/masku-maskuntie/"
-            target="_blank" rel="noopener" aria-label="Kotipizza" data-name="Kotipizza">
-            <span class="logo" style="--logo:url('./assets/logot/kotipizza_logo.avif');"></span>
+          <a class="tenant" href="https://www.kotipizza.fi/ravintolat/masku-maskuntie/" target="_blank" rel="noopener"
+            aria-label="Kotipizza" data-name="Kotipizza">
+            <span class="logo"
+              style="--logo-white:url('./assets/logot/kotipizza_white_logo.avif'); --logo-color:url('./assets/logot/kotipizza_color_logo.avif');">
+            </span>
             <span class="tenant-name">Kotipizza</span>
           </a>
           <a class="tenant" href="https://www.masku.com/" target="_blank" rel="noopener" aria-label="Masku"
             data-name="Masku">
-            <span class="logo" style="--logo:url('./assets/logot/masku_logo.avif');"></span>
+            <span class="logo"
+              style="--logo-white:url('./assets/logot/masku_white_logo.avif'); --logo-color:url('./assets/logot/masku_color_logo.avif');">
+            </span>
             <span class="tenant-name">Maskun Kalustetalo Humikkala</span>
           </a>
           <a class="tenant" href="https://www.mimosankukka.fi/" target="_blank" rel="noopener"
@@ -144,12 +147,16 @@
           </a>
           <a class="tenant" href="https://www.omasp.fi/konttorit/masku" target="_blank" rel="noopener"
             aria-label="OmaSp Masku" data-name="OmaSp">
-            <span class="logo" style="--logo:url('./assets/logot/omasp_logo.avif');"></span>
+            <span class="logo"
+              style="--logo-white:url('./assets/logot/omasp_white_logo.avif'); --logo-color:url('./assets/logot/omasp_color_logo.avif');">
+            </span>
             <span class="tenant-name">OmaSp</span>
           </a>
           <a class="tenant" href="https://www.taksihietanen.fi/" target="_blank" rel="noopener"
             aria-label="Taksi Hietanen" data-name="Taksi Hietanen">
-            <span class="logo" style="--logo:url('./assets/logot/taksihietanen_logo.avif');"></span>
+            <span class="logo"
+              style="--logo-white:url('./assets/logot/hietanen_white_logo.avif'); --logo-color:url('./assets/logot/hietanen_color_logo.avif');">
+            </span>
             <span class="tenant-name">Taksi Hietanen</span>
           </a>
           <!-- TENANTS:END -->
@@ -158,7 +165,8 @@
       </div>
     </section>
 
-    <section id="tietoja-meista" class="about container section section--inner has-media" aria-labelledby="meista-title">
+    <section id="tietoja-meista" class="about container section section--inner has-media"
+      aria-labelledby="meista-title">
       <div class="content">
         <h2 id="meista-title">Tietoa meistä</h2>
         <p>
@@ -358,6 +366,8 @@
   <script defer src="/js/core/image-ready.js"></script>
   <script defer src="/js/core/boot-loading-overlay.js"></script>
   <script defer src="/js/ui/pjax-soft-ready.js"></script>
+  <script defer src="/js/widgets/logo-hover-swap.js"></script>
+
 </body>
 
 </html>
