--- a/liikkeet-ja-palvelut.html
+++ b/liikkeet-ja-palvelut.html
@@ -22,17 +22,17 @@
   <meta name="twitter:title" content="Liikkeet ja palvelut – Maskun Kauppakeskus" />
   <meta name="twitter:description" content="Tutustu kaikkiin liikkeisiin ja palveluihin yhdellä sivulla." />
   <meta name="twitter:image" content="https://www.maskunkauppakeskus.fi/assets/share-liikkeet.avif" />
-<!-- Preload: tenant-logot (AVIF) -->
-<link rel="preload" as="image" href="./assets/logot/aitokauppa_logo.avif"  type="image/avif">
-<link rel="preload" as="image" href="./assets/logot/davin_logo.avif"       type="image/avif">
-<link rel="preload" as="image" href="./assets/logot/riviera_logo.avif"     type="image/avif">
-<link rel="preload" as="image" href="./assets/logot/lunula_logo.avif"      type="image/avif">
-<link rel="preload" as="image" href="./assets/logot/ahtinen_logo.avif"     type="image/avif">
-<link rel="preload" as="image" href="./assets/logot/kotipizza_logo.avif"   type="image/avif">
-<link rel="preload" as="image" href="./assets/logot/masku_logo.avif"       type="image/avif">
-<link rel="preload" as="image" href="./assets/logot/mimosan_logo.avif"     type="image/avif">
-<link rel="preload" as="image" href="./assets/logot/omasp_logo.avif"       type="image/avif">
-<link rel="preload" as="image" href="./assets/logot/taksihietanen_logo.avif" type="image/avif">
+  <!-- Preload: tenant-logot (AVIF) -->
+  <link rel="preload" as="image" href="./assets/logot/aitokauppa_logo.avif" type="image/avif">
+  <link rel="preload" as="image" href="./assets/logot/davin_logo.avif" type="image/avif">
+  <link rel="preload" as="image" href="./assets/logot/riviera_logo.avif" type="image/avif">
+  <link rel="preload" as="image" href="./assets/logot/lunula_logo.avif" type="image/avif">
+  <link rel="preload" as="image" href="./assets/logot/ahtinen_logo.avif" type="image/avif">
+  <link rel="preload" as="image" href="./assets/logot/kotipizza_logo.avif" type="image/avif">
+  <link rel="preload" as="image" href="./assets/logot/masku_logo.avif" type="image/avif">
+  <link rel="preload" as="image" href="./assets/logot/mimosan_logo.avif" type="image/avif">
+  <link rel="preload" as="image" href="./assets/logot/omasp_logo.avif" type="image/avif">
+  <link rel="preload" as="image" href="./assets/logot/taksihietanen_logo.avif" type="image/avif">
 
   <!-- Schema.org JSON-LD: sivu + lista liikkeistä -->
   <script type="application/ld+json">
@@ -225,7 +225,9 @@
       <article id="lunula" class="tenant-card" itemscope itemtype="https://schema.org/BeautySalon">
         <a class="tenant-card__logo" href="https://www.lunula.fi/" target="_blank" rel="noopener"
           aria-label="Kauneushoitola Lunula" itemprop="url">
-          <span class="logo" style="--logo:url('./assets/logot/lunula_logo.avif');" aria-hidden="true"></span>
+          <span class="logo"
+            style="--logo-white:url('./assets/logot/lunula_white_logo.avif'); --logo-color:url('./assets/logot/lunula_color_logo.avif');">
+          </span>
         </a>
         <div class="tenant-card__body">
           <h2 class="tenant-card__title" itemprop="name">Kauneushoitola Lunula</h2>
@@ -242,7 +244,9 @@
       <article id="ahtinen" class="tenant-card" itemscope itemtype="https://schema.org/ProfessionalService">
         <a class="tenant-card__logo" href="https://www.ahtinen.com/" target="_blank" rel="noopener"
           aria-label="Kiinteistö & Notariaatti Ahtinen" itemprop="url">
-          <span class="logo" style="--logo:url('./assets/logot/ahtinen_logo.avif');" aria-hidden="true"></span>
+          <span class="logo"
+            style="--logo-white:url('./assets/logot/ahtinen_white_logo.avif'); --logo-color:url('./assets/logot/ahtinen_color_logo.avif');">
+          </span>
         </a>
         <div class="tenant-card__body">
           <h2 class="tenant-card__title" itemprop="name">Kiinteistö &amp; Notariaatti Ahtinen</h2>
@@ -259,7 +263,9 @@
       <article id="kotipizza" class="tenant-card" itemscope itemtype="https://schema.org/Restaurant">
         <a class="tenant-card__logo" href="https://www.kotipizza.fi/ravintolat/masku-maskuntie/" target="_blank"
           rel="noopener" aria-label="Kotipizza" itemprop="url">
-          <span class="logo" style="--logo:url('./assets/logot/kotipizza_logo.avif');" aria-hidden="true"></span>
+          <span class="logo"
+            style="--logo-white:url('./assets/logot/kotipizza_white_logo.avif'); --logo-color:url('./assets/logot/kotipizza_color_logo.avif');">
+          </span>
         </a>
         <div class="tenant-card__body">
           <h2 class="tenant-card__title" itemprop="name">Kotipizza</h2>
@@ -278,7 +284,9 @@
       <article id="masku" class="tenant-card" itemscope itemtype="https://schema.org/FurnitureStore">
         <a class="tenant-card__logo" href="https://www.masku.com/" target="_blank" rel="noopener"
           aria-label="Maskun Kalustetalo Humikkala" itemprop="url">
-          <span class="logo" style="--logo:url('./assets/logot/masku_logo.avif');" aria-hidden="true"></span>
+          <span class="logo"
+            style="--logo-white:url('./assets/logot/masku_white_logo.avif'); --logo-color:url('./assets/logot/masku_color_logo.avif');">
+          </span>
         </a>
         <div class="tenant-card__body">
           <h2 class="tenant-card__title" itemprop="name">Maskun Kalustetalo Humikkala</h2>
@@ -311,7 +319,9 @@
       <article id="omasp" class="tenant-card" itemscope itemtype="https://schema.org/BankOrCreditUnion">
         <a class="tenant-card__logo" href="https://www.omasp.fi/konttorit/masku" target="_blank" rel="noopener"
           aria-label="OmaSp Masku" itemprop="url">
-          <span class="logo" style="--logo:url('./assets/logot/omasp_logo.avif');" aria-hidden="true"></span>
+          <span class="logo"
+            style="--logo-white:url('./assets/logot/omasp_white_logo.avif'); --logo-color:url('./assets/logot/omasp_color_logo.avif');">
+          </span>
         </a>
         <div class="tenant-card__body">
           <h2 class="tenant-card__title" itemprop="name">OmaSp Masku</h2>
@@ -329,7 +339,9 @@
       <article id="taksi-hietanen" class="tenant-card" itemscope itemtype="https://schema.org/TaxiService">
         <a class="tenant-card__logo" href="https://www.taksihietanen.fi/" target="_blank" rel="noopener"
           aria-label="Taksi Hietanen" itemprop="url">
-          <span class="logo" style="--logo:url('./assets/logot/taksihietanen_logo.avif');" aria-hidden="true"></span>
+          <span class="logo"
+            style="--logo-white:url('./assets/logot/hietanen_white_logo.avif'); --logo-color:url('./assets/logot/hietanen_color_logo.avif');">
+          </span>
         </a>
         <div class="tenant-card__body">
           <h2 class="tenant-card__title" itemprop="name">Taksi Hietanen</h2>
@@ -366,6 +378,8 @@
   <script defer src="/js/core/image-ready.js"></script>
   <script defer src="/js/core/boot-loading-overlay.js"></script>
   <script defer src="/js/ui/pjax-soft-ready.js"></script>
+  <script defer src="/js/widgets/logo-hover-swap.js"></script>
+
 </body>
 
 </html>
